<resources>
    <string name="app_name">TiketkuIOFlight</string>
    <string name="tv_choose_language">Choose Language</string>
    <string name="john_doe">John Doe</string>
    <string name="john_doe_example_email">Contoh: johndoe@gmail.com</string>
    <string name="john_doe_email">johndoe@gmail.com</string>
    <string name="toast_warning_email_not_registered">Email Address not Registered!</string>
    <string name="toast_warning_incorrect_password">Sorry, Incorrect Password</string>
    <string name="toast_success_reset_password_link">Reset Password Link Sent</string>
    <string name="toast_warning_invalid_or_expired_link">Invalid or Expired Links</string>
    <string name="toast_warning_minimum_character_password">Password Minimum 8 Characters</string>
    <string name="toast_success_otp_code_sent">OTP Code has been sent!</string>
    <string name="toast_success_registration_successful">Registration Successful</string>
    <string name="toast_warning_otp_incorrect_otp_code">Sorry, Incorrect OTP Code!</string>
    <string name="tv_login">Login</string>
    <string name="tv_email_telephone">Email / Phone Number</string>
    <string name="tv_forgot_password">Forgot Password</string>
    <string name="tv_password">Password</string>
    <string name="et_enter_password">Enter Password</string>
    <string name="tv_dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="tv_register_here">Register Here</string>
    <string name="btn_login">Login</string>
    <string name="tv_reset_password">Reset Password</string>
    <string name="tv_enter_new_password">Enter New Password</string>
    <string name="tv_enter_new_password_again">Enter New Password Again</string>
    <string name="btn_save">Save</string>
    <string name="tv_register">Register</string>
    <string name="tv_name">Name</string>
    <string name="et_full_name">Full Name</string>
    <string name="tv_email">Email</string>
    <string name="tv_phone_number">Phone Number</string>
    <string name="et_62">+62</string>
    <string name="tv_create_password">Create Password</string>
    <string name="et_create_password">Create Password</string>
    <string name="btn_register">Register</string>
    <string name="tv_already_have_an_account">Already have an Account?</string>
    <string name="tv_login_here">Login Here</string>
    <string name="tv_the_otp">Enter the OTP</string>
    <string name="tv_otp_sent">Type the 6-digit code sent</string>
    <string name="tv_to">To</string>
    <string name="tv_otp_resent">Resend</string>
    <string name="tv_otp_resent_after">Resend OTP in 60 Seconds</string>
    <string name="tv_otp_request">Request OTP Code via Email</string>
    <string name="tv_say_Hello">Hey, Where are you going?</string>
    <string name="tv_from">From</string>
    <string name="tv_jakarta_jkt">Jakarta (JKT)</string>
    <string name="tv_melbourne_mlb">Melbourne (MLB)</string>
    <string name="tv_round_trip">Round - Trip?</string>
    <string name="tv_departure">Departure</string>
    <string name="tv_return">Return</string>
    <string name="tv_passengers">Passengers</string>
    <string name="tv_seat_class">Seat Class</string>
    <string name="btn_search_flights">Search Flights</string>
    <string name="tv_favorite_destination">Favorite Destination</string>
    <string name="tv_limited">Limited!</string>
    <string name="tv_jakarta">Jakarta</string>
    <string name="icon_right_sign">-></string>
    <string name="tv_bangkok">Bangkok</string>
    <string name="tv_air_asia">AirAsia</string>
    <string name="tv_20_30_march_2023">20 –  30 March 2023</string>
    <string name="tv_starting_from">Starting From</string>
    <string name="tv_idr">IDR</string>
    <string name="tv_usd">USD</string>
    <string name="tv_idr_950">IDR 950.000</string>
    <string name="tv_discount_50_off">50% OFF</string>
    <string name="tv_sydney">Sydney</string>
    <string name="tv_5_25_march_2023">5 – 25 March 2023</string>
    <string name="tv_idr_3650">IDR 3.650.000</string>
    <string name="tv_city_or_country">Enter City or Country</string>
    <string name="tv_recent_search">Recent Search</string>
    <string name="tv_remove">Remove</string>
    <string name="tv_bandung">Bandung</string>
    <string name="tv_departure_date">Departure Date</string>
    <string name="tv_return_date">Return Date</string>
    <string name="btn_choose">Choose</string>
    <string name="tv_adult">Adult</string>
    <string name="tv_age_adult">(12 Years and above)</string>
    <string name="tv_child">Child</string>
    <string name="tv_age_child">(2 – 11 Years)</string>
    <string name="tv_baby">Baby</string>
    <string name="tv_age_baby">(Under 2 Years)</string>
    <string name="tv_economy">Economy</string>
    <string name="tv_idr_economy">IDR 4.950.000</string>
    <string name="tv_premium_economy">Premium Economy</string>
    <string name="tv_idr_premium_economy">IDR 7.550.000</string>
    <string name="tv_business">Business</string>
    <string name="tv_idr_business">IDR 29.220.000</string>
    <string name="tv_first_class">First Class</string>
    <string name="tv_idr_first_class">IDR 87.620.000</string>
    <string name="tv_jkt_mlb">JKT > MLB  - 2 Passengers - Economy</string>
    <string name="tv_filter">Filter</string>
    <string name="tv_cheapest">Cheapest</string>
    <string name="tv_loading">Loading…</string>
    <string name="tv_searching_best_flight">Searching for Best Flights</string>
    <string name="tv_today_only">Today Only!</string>
    <string name="tv_cheapest_price">Price - Cheapest</string>
    <string name="tv_shortest_duration">Duration - Shortest</string>
    <string name="tv_earliest_departure">Departure - Earliest</string>
    <string name="tv_latest_latest">Departure - Latest</string>
    <string name="tv_earliest_arrival">Arrival - Earliest</string>
    <string name="tv_latest_arrival">Arrival - Latest</string>
    <string name="tv_flight_options">Flight Options</string>
    <string name="tv_soekarno_hatta">Soekarno Hatta</string>
    <string name="tv_terminal_1a_domestic">Terminal 1A Domestic</string>
    <string name="tv_melbourne_international_airport">Melbourne International Airport</string>
    <string name="tv_total">Total</string>
    <string name="tv_search_not_found">Sorry, your search was not found</string>
    <string name="tv_try_other_search">Try searching for other trips!</string>
    <string name="btn_change_search">Change Search</string>
    <string name="tv_ticket_sold_out">Sorry, tickets are sold out!</string>
    <string name="tv_booking_history">Booking History</string>
    <string name="tv_login_first">Sorry, you must login first!</string>
    <string name="tv_promotion">Promotion</string>
    <string name="tv_get_promotion_ticket">Get 50% OFF Tickets!</string>
    <string name="tv_terms_condition">Terms and Conditions Apply!</string>
    <string name="tv_home">Home</string>
    <string name="tv_history">History</string>
    <string name="tv_notification">Notification</string>
    <string name="tv_account">Account</string>
    <string name="btn_home">Home</string>
    <string name="btn_history">History</string>
    <string name="btn_notification">Notification</string>
    <string name="btn_account">Account</string>
    <string name="tv_booking_biodata">Booking Biodata</string>
    <string name="tv_booking_personal_data">Booking Persoal Data</string>
    <string name="tv_got_family_name">Got a Family Name</string>
    <string name="tv_family_name">Family Name</string>
    <string name="tv_passenger_biodata">Passenger Biodata</string>
    <string name="tv_passenger_seat">Passenger 1 - Adult</string>
    <string name="tv_passenger_title">Title</string>
    <string name="tv_passenger_birthdate">Birth Date</string>
    <string name="tv_passenger_citizenship">Citizenship</string>
    <string name="tv_passenger_id_card_passport">ID Card/Passport</string>
    <string name="tv_passenger_country_publication">Country Publication</string>
    <string name="tv_flight_details">Flight Details</string>
    <string name="tv_price_details">Price Details</string>
    <string name="tv_tax">Tax</string>
    <string name="tv_promo">Promo</string>
    <string name="btn_continue_payment">Continue Payment</string>
    <string name="tv_processing_payment">Processing Payment</string>
    <string name="tv_booking_code">Booking Code</string>
    <string name="tv_class">Class</string>
    <string name="tv_card_number">Card Number</string>
    <string name="et_card_number">4480 0000 0000 0000</string>
    <string name="tv_card_holder_name">Card Holder Name</string>
    <string name="tv_cvv">CVV</string>
    <string name="et_cvv">000</string>
    <string name="tv_expiry_date">Expiry Date</string>
    <string name="et_expiry_date">07/24</string>
    <string name="tv_pay">Pay</string>
    <string name="tv_congratulations">Congratulations!</string>
    <string name="tv_successful_payments">Your ticket payment transaction was successful!</string>
    <string name="btn_issue_ticket">Issue Ticket</string>
    <string name="tv_booking_history_empty">Oops! Booking history is empty!</string>
    <string name="tv_have_not_placed">You have not placed an order</string>
    <string name="tv_issued">Issued</string>
    <string name="tv_up_paid">Unpaid</string>
    <string name="tv_cancelled">Canceled</string>
    <string name="tv_change_profile">Change Profile</string>
    <string name="tv_account_setting">Account Setting</string>
    <string name="tv_logout">Logout</string>
    <string name="tv_version">Version 1.1.0</string>
    <string name="tuesday">tuesday</string>
    <string name="_01_03_2023">01–03–2023</string>
    <string name="_6281212121212">+6281212121212</string>
    <string name="tv_1_march_2023">1 march 2023</string>
    <string name="tv_2_passengers">2 Passengers</string>
    <string name="_20_maret_14_04">20 Maret, 14:04</string>
    <string-array name="tv_online_payment">
        <item>Gopay</item>
        <item>Dana</item>
        <item>Ovo</item>
    </string-array>
    <string-array name="tv_bank_payment">
        <item>Mastercard</item>
        <item>Visa</item>
        <item>American Express</item>
        <item>Paypal</item>
    </string-array>
    <string-array name="tv_best_flight">
        <item>Jet Air - Economy</item>
        <item>Jet Airline - Economy</item>
        <item>Jet Air - Economy Premium</item>
    </string-array>
    <string-array name="tv_currency">
        <item>USD</item>
        <item>IDR</item>
    </string-array>
    <string-array name="tv_date">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="tv_month_name">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>Mei</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>