<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginVertical="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:strokeColor="@color/darkblue04"
        app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:strokeColor="@color/limegreen03"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_sample_destination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_jakarta"
            app:layout_constraintTop_toBottomOf="@id/iv_place"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/md_outline"
            android:layout_width="15dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="10dp"
            android:background="@color/neutral03"
            app:layout_constraintStart_toEndOf="@id/tv_departure"
            app:layout_constraintTop_toBottomOf="@id/iv_place" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bangkok"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/iv_place"
            app:layout_constraintStart_toEndOf="@id/md_outline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_plane_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_air_asia"
            android:textSize="12sp"
            android:textColor="@color/darkblue04"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_departure"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/neutral05"
            android:textSize="12sp"
            android:text="@string/tv_20_30_march_2023"
            app:layout_constraintTop_toBottomOf="@id/tv_plane_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_start_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/neutral05"
            android:text="@string/tv_starting_from"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_price_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_idr_950"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/danger"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            app:layout_constraintStart_toEndOf="@id/tv_start_price"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</com.google.android.material.card.MaterialCardView>