<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.BookingHistoryNonLoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sign_booking_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="64dp"
        android:text="@string/tv_booking_history"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="107dp"
        android:text="@string/tv_login_first"
        android:textColor="@color/neutral05"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_booking_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/booking_history_non_login"
        app:layout_constraintTop_toBottomOf="@id/tv_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="16dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/darkblue04"
        android:text="@string/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_history"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btn_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>