<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.BottomSheetHomeSearchDestinationFragment"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/containerSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <SearchView
                android:id="@+id/search_view"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:iconifiedByDefault="false"
                android:queryHint="@string/tv_city_or_country" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_close_24"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_recent_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/containerSearch"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tv_recent_search"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/containerSearch"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="15sp"
            android:text="@string/tv_remove"
            android:textColor="@color/danger" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recent_search"
            android:layout_width="match_parent"
            tools:listitem="@layout/item_airport"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_recent_search" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
